// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`multivariate (parallel) canvas renders base one axis per category, one polyline per field 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666672,"y":94.900002}},
{"type":"lineTo","props":{"x":253.333328,"y":116.199997}},
{"type":"lineTo","props":{"x":360,"y":52.299999}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666672,"y":94.900002}},{"type":"lineTo","props":{"x":253.333328,"y":116.199997}},{"type":"lineTo","props":{"x":360,"y":52.299999}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"lineTo","props":{"x":146.666672,"y":52.299999}},
{"type":"lineTo","props":{"x":253.333328,"y":137.5}},
{"type":"lineTo","props":{"x":360,"y":94.900002}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"lineTo","props":{"x":146.666672,"y":52.299999}},{"type":"lineTo","props":{"x":253.333328,"y":137.5}},{"type":"lineTo","props":{"x":360,"y":94.900002}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":57.625}},
{"type":"lineTo","props":{"x":146.666672,"y":137.5}},
{"type":"lineTo","props":{"x":253.333328,"y":62.950001}},
{"type":"lineTo","props":{"x":360,"y":116.199997}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":57.625}},{"type":"lineTo","props":{"x":146.666672,"y":137.5}},{"type":"lineTo","props":{"x":253.333328,"y":62.950001}},{"type":"lineTo","props":{"x":360,"y":116.199997}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666667,"y":106.9}},
{"type":"lineTo","props":{"x":253.333333,"y":132.2}},
{"type":"lineTo","props":{"x":360,"y":56.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666667,"y":106.9}},{"type":"lineTo","props":{"x":253.333333,"y":132.2}},{"type":"lineTo","props":{"x":360,"y":56.3}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":94.25}},
{"type":"lineTo","props":{"x":146.666667,"y":56.3}},
{"type":"lineTo","props":{"x":253.333333,"y":157.5}},
{"type":"lineTo","props":{"x":360,"y":106.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":94.25}},{"type":"lineTo","props":{"x":146.666667,"y":56.3}},{"type":"lineTo","props":{"x":253.333333,"y":157.5}},{"type":"lineTo","props":{"x":360,"y":106.9}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":62.625}},
{"type":"lineTo","props":{"x":146.666667,"y":157.5}},
{"type":"lineTo","props":{"x":253.333333,"y":68.95}},
{"type":"lineTo","props":{"x":360,"y":132.2}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":62.625}},{"type":"lineTo","props":{"x":146.666667,"y":157.5}},{"type":"lineTo","props":{"x":253.333333,"y":68.95}},{"type":"lineTo","props":{"x":360,"y":132.2}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders color byName fixed-color override 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666672,"y":94.900002}},
{"type":"lineTo","props":{"x":253.333328,"y":116.199997}},
{"type":"lineTo","props":{"x":360,"y":52.299999}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666672,"y":94.900002}},{"type":"lineTo","props":{"x":253.333328,"y":116.199997}},{"type":"lineTo","props":{"x":360,"y":52.299999}}]}},
{"type":"strokeStyle","props":{"value":"#f2495c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"lineTo","props":{"x":146.666672,"y":52.299999}},
{"type":"lineTo","props":{"x":253.333328,"y":137.5}},
{"type":"lineTo","props":{"x":360,"y":94.900002}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"lineTo","props":{"x":146.666672,"y":52.299999}},{"type":"lineTo","props":{"x":253.333328,"y":137.5}},{"type":"lineTo","props":{"x":360,"y":94.900002}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":57.625}},
{"type":"lineTo","props":{"x":146.666672,"y":137.5}},
{"type":"lineTo","props":{"x":253.333328,"y":62.950001}},
{"type":"lineTo","props":{"x":360,"y":116.199997}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":57.625}},{"type":"lineTo","props":{"x":146.666672,"y":137.5}},{"type":"lineTo","props":{"x":253.333328,"y":62.950001}},{"type":"lineTo","props":{"x":360,"y":116.199997}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666667,"y":106.9}},
{"type":"lineTo","props":{"x":253.333333,"y":132.2}},
{"type":"lineTo","props":{"x":360,"y":56.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666667,"y":106.9}},{"type":"lineTo","props":{"x":253.333333,"y":132.2}},{"type":"lineTo","props":{"x":360,"y":56.3}}]}},
{"type":"strokeStyle","props":{"value":"#f2495c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":94.25}},
{"type":"lineTo","props":{"x":146.666667,"y":56.3}},
{"type":"lineTo","props":{"x":253.333333,"y":157.5}},
{"type":"lineTo","props":{"x":360,"y":106.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":94.25}},{"type":"lineTo","props":{"x":146.666667,"y":56.3}},{"type":"lineTo","props":{"x":253.333333,"y":157.5}},{"type":"lineTo","props":{"x":360,"y":106.9}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":62.625}},
{"type":"lineTo","props":{"x":146.666667,"y":157.5}},
{"type":"lineTo","props":{"x":253.333333,"y":68.95}},
{"type":"lineTo","props":{"x":360,"y":132.2}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":62.625}},{"type":"lineTo","props":{"x":146.666667,"y":157.5}},{"type":"lineTo","props":{"x":253.333333,"y":68.95}},{"type":"lineTo","props":{"x":360,"y":132.2}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders edge cases null gap (a missing value breaks the polyline) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":253.333333,"y":31}},
{"type":"lineTo","props":{"x":360,"y":52.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":253.333333,"y":31}},{"type":"lineTo","props":{"x":360,"y":52.3}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"lineTo","props":{"x":146.666672,"y":52.299999}},
{"type":"lineTo","props":{"x":253.333328,"y":66.5}},
{"type":"lineTo","props":{"x":360,"y":94.900002}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"lineTo","props":{"x":146.666672,"y":52.299999}},{"type":"lineTo","props":{"x":253.333328,"y":66.5}},{"type":"lineTo","props":{"x":360,"y":94.900002}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":253.333333,"y":31}},
{"type":"lineTo","props":{"x":360,"y":56.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":253.333333,"y":31}},{"type":"lineTo","props":{"x":360,"y":56.3}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":94.25}},
{"type":"lineTo","props":{"x":146.666667,"y":56.3}},
{"type":"lineTo","props":{"x":253.333333,"y":73.166667}},
{"type":"lineTo","props":{"x":360,"y":106.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":94.25}},{"type":"lineTo","props":{"x":146.666667,"y":56.3}},{"type":"lineTo","props":{"x":253.333333,"y":73.166667}},{"type":"lineTo","props":{"x":360,"y":106.9}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders edge cases single line (one numeric field) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666672,"y":31}},
{"type":"lineTo","props":{"x":253.333328,"y":31}},
{"type":"lineTo","props":{"x":360,"y":52.299999}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666672,"y":31}},{"type":"lineTo","props":{"x":253.333328,"y":31}},{"type":"lineTo","props":{"x":360,"y":52.299999}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666667,"y":31}},
{"type":"lineTo","props":{"x":253.333333,"y":31}},
{"type":"lineTo","props":{"x":360,"y":56.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666667,"y":31}},{"type":"lineTo","props":{"x":253.333333,"y":31}},{"type":"lineTo","props":{"x":360,"y":56.3}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders layout vertical (axes top-to-bottom) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":320,"y":16}},
{"type":"lineTo","props":{"x":228.800003,"y":89.333336}},
{"type":"lineTo","props":{"x":198.399994,"y":162.666672}},
{"type":"lineTo","props":{"x":289.600006,"y":236}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":320,"y":16}},{"type":"lineTo","props":{"x":228.800003,"y":89.333336}},{"type":"lineTo","props":{"x":198.399994,"y":162.666672}},{"type":"lineTo","props":{"x":289.600006,"y":236}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":244,"y":16}},
{"type":"lineTo","props":{"x":289.600006,"y":89.333336}},
{"type":"lineTo","props":{"x":168,"y":162.666672}},
{"type":"lineTo","props":{"x":228.800003,"y":236}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":244,"y":16}},{"type":"lineTo","props":{"x":289.600006,"y":89.333336}},{"type":"lineTo","props":{"x":168,"y":162.666672}},{"type":"lineTo","props":{"x":228.800003,"y":236}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":282,"y":16}},
{"type":"lineTo","props":{"x":168,"y":89.333336}},
{"type":"lineTo","props":{"x":274.399994,"y":162.666672}},
{"type":"lineTo","props":{"x":198.399994,"y":236}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":282,"y":16}},{"type":"lineTo","props":{"x":168,"y":89.333336}},{"type":"lineTo","props":{"x":274.399994,"y":162.666672}},{"type":"lineTo","props":{"x":198.399994,"y":236}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":320,"y":16}},
{"type":"lineTo","props":{"x":228.8,"y":102.666667}},
{"type":"lineTo","props":{"x":198.4,"y":189.333333}},
{"type":"lineTo","props":{"x":289.6,"y":276}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":320,"y":16}},{"type":"lineTo","props":{"x":228.8,"y":102.666667}},{"type":"lineTo","props":{"x":198.4,"y":189.333333}},{"type":"lineTo","props":{"x":289.6,"y":276}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":244,"y":16}},
{"type":"lineTo","props":{"x":289.6,"y":102.666667}},
{"type":"lineTo","props":{"x":168,"y":189.333333}},
{"type":"lineTo","props":{"x":228.8,"y":276}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":244,"y":16}},{"type":"lineTo","props":{"x":289.6,"y":102.666667}},{"type":"lineTo","props":{"x":168,"y":189.333333}},{"type":"lineTo","props":{"x":228.8,"y":276}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":282,"y":16}},
{"type":"lineTo","props":{"x":168,"y":102.666667}},
{"type":"lineTo","props":{"x":274.4,"y":189.333333}},
{"type":"lineTo","props":{"x":198.4,"y":276}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":282,"y":16}},{"type":"lineTo","props":{"x":168,"y":102.666667}},{"type":"lineTo","props":{"x":274.4,"y":189.333333}},{"type":"lineTo","props":{"x":198.4,"y":276}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders line style line opacity 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666672,"y":94.900002}},
{"type":"lineTo","props":{"x":253.333328,"y":116.199997}},
{"type":"lineTo","props":{"x":360,"y":52.299999}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666672,"y":94.900002}},{"type":"lineTo","props":{"x":253.333328,"y":116.199997}},{"type":"lineTo","props":{"x":360,"y":52.299999}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"lineTo","props":{"x":146.666672,"y":52.299999}},
{"type":"lineTo","props":{"x":253.333328,"y":137.5}},
{"type":"lineTo","props":{"x":360,"y":94.900002}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"lineTo","props":{"x":146.666672,"y":52.299999}},{"type":"lineTo","props":{"x":253.333328,"y":137.5}},{"type":"lineTo","props":{"x":360,"y":94.900002}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":57.625}},
{"type":"lineTo","props":{"x":146.666672,"y":137.5}},
{"type":"lineTo","props":{"x":253.333328,"y":62.950001}},
{"type":"lineTo","props":{"x":360,"y":116.199997}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":57.625}},{"type":"lineTo","props":{"x":146.666672,"y":137.5}},{"type":"lineTo","props":{"x":253.333328,"y":62.950001}},{"type":"lineTo","props":{"x":360,"y":116.199997}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666667,"y":106.9}},
{"type":"lineTo","props":{"x":253.333333,"y":132.2}},
{"type":"lineTo","props":{"x":360,"y":56.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666667,"y":106.9}},{"type":"lineTo","props":{"x":253.333333,"y":132.2}},{"type":"lineTo","props":{"x":360,"y":56.3}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":94.25}},
{"type":"lineTo","props":{"x":146.666667,"y":56.3}},
{"type":"lineTo","props":{"x":253.333333,"y":157.5}},
{"type":"lineTo","props":{"x":360,"y":106.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":94.25}},{"type":"lineTo","props":{"x":146.666667,"y":56.3}},{"type":"lineTo","props":{"x":253.333333,"y":157.5}},{"type":"lineTo","props":{"x":360,"y":106.9}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":62.625}},
{"type":"lineTo","props":{"x":146.666667,"y":157.5}},
{"type":"lineTo","props":{"x":253.333333,"y":68.95}},
{"type":"lineTo","props":{"x":360,"y":132.2}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":62.625}},{"type":"lineTo","props":{"x":146.666667,"y":157.5}},{"type":"lineTo","props":{"x":253.333333,"y":68.95}},{"type":"lineTo","props":{"x":360,"y":132.2}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders line style line width 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":4}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666672,"y":94.900002}},
{"type":"lineTo","props":{"x":253.333328,"y":116.199997}},
{"type":"lineTo","props":{"x":360,"y":52.299999}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666672,"y":94.900002}},{"type":"lineTo","props":{"x":253.333328,"y":116.199997}},{"type":"lineTo","props":{"x":360,"y":52.299999}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"lineTo","props":{"x":146.666672,"y":52.299999}},
{"type":"lineTo","props":{"x":253.333328,"y":137.5}},
{"type":"lineTo","props":{"x":360,"y":94.900002}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"lineTo","props":{"x":146.666672,"y":52.299999}},{"type":"lineTo","props":{"x":253.333328,"y":137.5}},{"type":"lineTo","props":{"x":360,"y":94.900002}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":57.625}},
{"type":"lineTo","props":{"x":146.666672,"y":137.5}},
{"type":"lineTo","props":{"x":253.333328,"y":62.950001}},
{"type":"lineTo","props":{"x":360,"y":116.199997}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":57.625}},{"type":"lineTo","props":{"x":146.666672,"y":137.5}},{"type":"lineTo","props":{"x":253.333328,"y":62.950001}},{"type":"lineTo","props":{"x":360,"y":116.199997}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineWidth","props":{"value":4}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"lineTo","props":{"x":146.666667,"y":106.9}},
{"type":"lineTo","props":{"x":253.333333,"y":132.2}},
{"type":"lineTo","props":{"x":360,"y":56.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"lineTo","props":{"x":146.666667,"y":106.9}},{"type":"lineTo","props":{"x":253.333333,"y":132.2}},{"type":"lineTo","props":{"x":360,"y":56.3}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":94.25}},
{"type":"lineTo","props":{"x":146.666667,"y":56.3}},
{"type":"lineTo","props":{"x":253.333333,"y":157.5}},
{"type":"lineTo","props":{"x":360,"y":106.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":94.25}},{"type":"lineTo","props":{"x":146.666667,"y":56.3}},{"type":"lineTo","props":{"x":253.333333,"y":157.5}},{"type":"lineTo","props":{"x":360,"y":106.9}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":62.625}},
{"type":"lineTo","props":{"x":146.666667,"y":157.5}},
{"type":"lineTo","props":{"x":253.333333,"y":68.95}},
{"type":"lineTo","props":{"x":360,"y":132.2}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":62.625}},{"type":"lineTo","props":{"x":146.666667,"y":157.5}},{"type":"lineTo","props":{"x":253.333333,"y":68.95}},{"type":"lineTo","props":{"x":360,"y":132.2}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (parallel) canvas renders smooth curves the polylines through the axis crossings 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":31,"cpx2":112.529396,"cpy2":81.266426,"x":146.666672,"y":94.900002}},
{"type":"bezierCurveTo","props":{"cpx1":176.529388,"cpy1":106.826424,"cpx2":223.470612,"cpy2":122.163216,"x":253.333328,"y":116.199997}},
{"type":"bezierCurveTo","props":{"cpx1":287.470612,"cpy1":109.383217,"cpx2":360,"cpy2":52.299999,"x":360,"y":52.299999}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":31,"cpx2":112.529396,"cpy2":81.266426,"x":146.666672,"y":94.900002}},{"type":"bezierCurveTo","props":{"cpx1":176.529388,"cpy1":106.826424,"cpx2":223.470612,"cpy2":122.163216,"x":253.333328,"y":116.199997}},{"type":"bezierCurveTo","props":{"cpx1":287.470612,"cpy1":109.383217,"cpx2":360,"cpy2":52.299999,"x":360,"y":52.299999}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":84.25}},
{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":84.25,"cpx2":117.915886,"cpy2":45.123535,"x":146.666672,"y":52.299999}},
{"type":"bezierCurveTo","props":{"cpx1":181.915894,"cpy1":61.098537,"cpx2":218.576279,"cpy2":130.559448,"x":253.333328,"y":137.5}},
{"type":"bezierCurveTo","props":{"cpx1":282.576294,"cpy1":143.339447,"cpx2":360,"cpy2":94.900002,"x":360,"y":94.900002}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":84.25}},{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":84.25,"cpx2":117.915886,"cpy2":45.123535,"x":146.666672,"y":52.299999}},{"type":"bezierCurveTo","props":{"cpx1":181.915894,"cpy1":61.098537,"cpx2":218.576279,"cpy2":130.559448,"x":253.333328,"y":137.5}},{"type":"bezierCurveTo","props":{"cpx1":282.576294,"cpy1":143.339447,"cpx2":360,"cpy2":94.900002,"x":360,"y":94.900002}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":57.625}},
{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":57.625,"cpx2":114.287376,"cpy2":136.691788,"x":146.666672,"y":137.5}},
{"type":"bezierCurveTo","props":{"cpx1":178.287369,"cpy1":138.289276,"cpx2":219.932388,"cpy2":66.284874,"x":253.333328,"y":62.950001}},
{"type":"bezierCurveTo","props":{"cpx1":283.932404,"cpy1":59.894875,"cpx2":360,"cpy2":116.199997,"x":360,"y":116.199997}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":57.625}},{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":57.625,"cpx2":114.287376,"cpy2":136.691788,"x":146.666672,"y":137.5}},{"type":"bezierCurveTo","props":{"cpx1":178.287369,"cpy1":138.289276,"cpx2":219.932388,"cpy2":66.284874,"x":253.333328,"y":62.950001}},{"type":"bezierCurveTo","props":{"cpx1":283.932404,"cpy1":59.894875,"cpx2":360,"cpy2":116.199997,"x":360,"y":116.199997}}]}},
{"type":"restore","props":{}},
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":31}},
{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":31,"cpx2":111.834592,"cpy2":90.376535,"x":146.666667,"y":106.9}},
{"type":"bezierCurveTo","props":{"cpx1":175.834592,"cpy1":120.736535,"cpx2":224.165408,"cpy2":139.118267,"x":253.333333,"y":132.2}},
{"type":"bezierCurveTo","props":{"cpx1":288.165408,"cpy1":123.938267,"cpx2":360,"cpy2":56.3,"x":360,"y":56.3}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":31}},{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":31,"cpx2":111.834592,"cpy2":90.376535,"x":146.666667,"y":106.9}},{"type":"bezierCurveTo","props":{"cpx1":175.834592,"cpy1":120.736535,"cpx2":224.165408,"cpy2":139.118267,"x":253.333333,"y":132.2}},{"type":"bezierCurveTo","props":{"cpx1":288.165408,"cpy1":123.938267,"cpx2":360,"cpy2":56.3,"x":360,"y":56.3}}]}},
{"type":"strokeStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":94.25}},
{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":94.25,"cpx2":118.824892,"cpy2":48.045349,"x":146.666667,"y":56.3}},
{"type":"bezierCurveTo","props":{"cpx1":182.824892,"cpy1":67.020349,"cpx2":217.835731,"cpy2":149.080413,"x":253.333333,"y":157.5}},
{"type":"bezierCurveTo","props":{"cpx1":281.835731,"cpy1":164.260413,"cpx2":360,"cpy2":106.9,"x":360,"y":106.9}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":94.25}},{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":94.25,"cpx2":118.824892,"cpy2":48.045349,"x":146.666667,"y":56.3}},{"type":"bezierCurveTo","props":{"cpx1":182.824892,"cpy1":67.020349,"cpx2":217.835731,"cpy2":149.080413,"x":253.333333,"y":157.5}},{"type":"bezierCurveTo","props":{"cpx1":281.835731,"cpy1":164.260413,"cpx2":360,"cpy2":106.9,"x":360,"y":106.9}}]}},
{"type":"strokeStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":40,"y":62.625}},
{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":62.625,"cpx2":114.197789,"cpy2":156.537348,"x":146.666667,"y":157.5}},
{"type":"bezierCurveTo","props":{"cpx1":178.197789,"cpy1":158.434848,"cpx2":219.551713,"cpy2":72.956289,"x":253.333333,"y":68.95}},
{"type":"bezierCurveTo","props":{"cpx1":283.551713,"cpy1":65.366289,"cpx2":360,"cpy2":132.2,"x":360,"y":132.2}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":40,"y":62.625}},{"type":"bezierCurveTo","props":{"cpx1":40,"cpy1":62.625,"cpx2":114.197789,"cpy2":156.537348,"x":146.666667,"y":157.5}},{"type":"bezierCurveTo","props":{"cpx1":178.197789,"cpy1":158.434848,"cpx2":219.551713,"cpy2":72.956289,"x":253.333333,"y":68.95}},{"type":"bezierCurveTo","props":{"cpx1":283.551713,"cpy1":65.366289,"cpx2":360,"cpy2":132.2,"x":360,"y":132.2}}]}},
{"type":"restore","props":{}}
]
`;

exports[`multivariate (radar) canvas renders one polygon per numeric field, filling the canvas 1`] = `[]`;
